--- a/package.json
+++ b/package.json
@@ -56,15 +56,15 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.8.4",
-    "chalk": "^3.0.0",
-    "shelljs": "^0.8.3",
     "@types/mini-css-extract-plugin": "^0.9.0",
     "@types/node": "^13.5.3",
     "@types/webpack": "^4.41.0",
     "babel-preset-vue": "^2.0.2",
+    "chalk": "^3.0.0",
     "npmlog": "^4.1.2",
+    "shelljs": "^0.8.3",
     "typescript": "^3.7.5",
-    "vue": "^2.6.8",
+    "vue": "^3.0.0-alpha.4",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.8"
   },
@@ -74,7 +74,7 @@
     "css-loader": "*",
     "react": "*",
     "react-dom": "*",
-    "vue": "^2.6.8",
+	"vue": "^3.0.0-alpha.4",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.8"
   },
